# MAGE-Finger

./: .gitignore  LICENSE
.github/workflows/: lint.yml  test-scaffolder.yml
metamaterial/: README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup_env.sh
metamaterial/input/: pad.stl  test_small.stl  unipad.stl
metamaterial/scripts/: generate_gradient_metamaterial.py  generate_metamaterial.py  inspect_metamaterial.py  preview_axes.py  reorient_unipad.py
metamaterial/scripts/meta/: __init__.py  cells.py  generator.py  geometry.py  gradient.py  inspect.py  mesh.py  preview.py  shell.py  stiffness.py
metamaterial/tests/: conftest.py  test_cells.py  test_generator.py  test_gradient.py  test_integration.py  test_preview.py  test_shell.py  test_stiffness.py
scaffolder/: README.md  environment.yml  pyproject.toml  pytest.ini
scaffolder/input/: test.stl
scaffolder/scripts/: generate_gradient_scaffold.py  generate_scaffold.py  inspect_scaffold.py  reorganize_sweep.py  run_sweep.py  simplify_scaffolds.py
scaffolder/scripts/scaffold/: __init__.py  field.py  geometry.py  inspect.py  mesh.py  profile.py  simplify.py  stiffness.py  tpms.py
scaffolder/tests/: conftest.py  test_field.py  test_geometry.py  test_inspect.py  test_integration.py  test_mesh.py  test_profile.py  test_simplify.py  test_stiffness.py  test_tpms.py
