[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mage-finger-meta"
version = "0.1.0"
description = "Microgen-based TPMS metamaterial generator for MAGE Finger prosthetic pads"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "microgen",
    "pyvista",
    "numpy<2",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

# ---------------------------------------------------------------------------
# Package layout
# The meta library lives under scripts/meta/.
# After `pip install -e .` from this directory, `import meta` works
# without any sys.path.insert() hacks in scripts.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
sources = ["scripts"]
packages = ["meta"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# Run: ruff check scripts/ && ruff format scripts/
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not call functions in default arguments (argparse pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4"]   # relaxed in tests

# ---------------------------------------------------------------------------
# Mypy (type checking)
# Run: mypy scripts/meta/
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true   # microgen has no stubs

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: slow end-to-end tests that run the full microgen generation pipeline"]
filterwarnings = ["ignore::DeprecationWarning"]
