[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mage-finger-scaffolder"
version = "0.1.0"
description = "PyScaffolder-based TPMS scaffold generator for MAGE Finger prosthetic pads"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyvista",
    "numpy<2",
    "scipy",
    "scikit-image",
    "matplotlib",
    # PyScaffolder is PyPI-only and must be pip-installed with --no-deps
    # to avoid pulling numpy>=2. See environment.yml for conda setup.
    # "PyScaffolder",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

# ---------------------------------------------------------------------------
# Package layout
# The scaffold library lives under scripts/scaffold/.
# After `pip install -e .` from this directory, `import scaffold` works
# without any sys.path.insert() hacks in scripts.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
sources = ["scripts"]
packages = ["scaffold"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# Run: ruff check scripts/ && ruff format scripts/
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not call functions in default arguments (argparse pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4"]   # relaxed in tests

# ---------------------------------------------------------------------------
# Mypy (type checking)
# Run: mypy scripts/scaffold/
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true   # PyScaffolder has no stubs

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: slow end-to-end tests that run the full generation pipeline"]
